latest portfolio update

--- a/Exploring German Ebay Car Sales/notebook.ipynb
+++ b/Exploring German Ebay Car Sales/notebook.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Exploring Ebay Car Sales Data\n",
+    "# Exploring German Ebay Car Sales Data\n",
     "\n",
     "The aim of this project is to clean the data and analyze the included used car listings. This dataset of used cars was scraped from eBay Kleinanzeigen, a classifieds section of the Gernman eBay website. It has roughly 50,000 data points."
    ]
