--- a/Optimal Time for Hacker News Posts/notebook.ipynb
+++ b/Optimal Time for Hacker News Posts/notebook.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "# Exploring Hacker News Posts\n",
     "\n",
-    "In this project, we'll work with a data set of submissions to a very popular technology site, Hacker News. This is a website where posts made by users are voted and get commented upon, very similar in functionality to Reddit. Posts that make it to the top of Hacker News' listings can get hundreds of thousands of visitors as a result. \n",
-    "\n",
-    "We'll be working with two types of posts whose titles begin with: Ask HN and Show HN. Ask HN posts are concerned with asking the community a specific question while Show HN posts are concerned with showing the community a project or a product. From comparison of these two type of posts, we'll determine the following:\n",
+    "In this project, we'll work with a data set of submissions to a very popular technology site, Hacker News. This is a website where posts made by users are voted and get commented upon, very similar in functionality to Reddit. We'll be working with two types of posts whose titles begin with: Ask HN and Show HN. Ask HN posts are concerned with asking the community a specific question while Show HN posts are concerned with showing the community a project or a product. From comparison of these two type of posts, we'll determine the following:\n",
     "- Which type of post gets more comments on average?\n",
     "- Do posts created at a certain time receive more comments on average?"
    ]
